@@ -1,3 +1,15 @@
+2013-01-17  Seokju Kwon  <seokju.kwon@gmail.com>
+
+        [EFL][CMAKE] Compress resource files of inspector
+        https://bugs.webkit.org/show_bug.cgi?id=106210
+
+        Reviewed by Gyuyoung Kim.
+
+        Add compressing JavaScript
+        for smaller package and faster connection of remote web inspector.
+
+        * Source/PlatformEfl.cmake:
+
 2013-01-16  Hugo Parente Lima  <hugo.lima@openbossa.org>
 
         [CMake] Report actual values for feature configuration (instead of the default)
